# HuggingFace_DRL_Course

HFDRL_UNIT8/: Push_to_hub.py  eval.py  monitor.sh  plot_tb.py  ppo.py  pyproject.toml  train.py  train.py.save
HFDRL_UNIT8/hub_artifacts/LunarLander-v2__eval__1__1768767946/: README.md  eval_metrics.json
HFDRL_UNIT8/hub_artifacts/LunarLander-v3__eval__1__1768767663/: README.md  eval_metrics.json
HFDRL_UNIT8/models/: LunarLander-v3__ppo__1__1768758426.ckpt  LunarLander-v3__ppo__1__1768758426.pt  LunarLander-v3__ppo__1__1768758433.ckpt  LunarLander-v3__ppo__1__1768758433.pt
HFDRL_UNIT8/models/Archived/: LunarLander-v3__ppo__1__1768732591__u100.pt  LunarLander-v3__ppo__1__1768732591__u120.pt  LunarLander-v3__ppo__1__1768732591__u140.pt  LunarLander-v3__ppo__1__1768732591__u160.pt  LunarLander-v3__ppo__1__1768732591__u20.pt  LunarLander-v3__ppo__1__1768732591__u40.pt  LunarLander-v3__ppo__1__1768732591__u60.pt  LunarLander-v3__ppo__1__1768732591__u80.pt  LunarLander-v3__ppo__1__1768732591_resume__u20.ckpt  LunarLander-v3__ppo__1__1768732591_resume__u20.pt  LunarLander-v3__ppo__1__1768732591_resume_ent0.02__u20.ckpt  LunarLander-v3__ppo__1__1768732591_resume_ent0.02__u20.pt  LunarLander-v3__ppo__1__1768732728__u100.pt  LunarLander-v3__ppo__1__1768732728__u120.pt  LunarLander-v3__ppo__1__1768732728__u140.pt  LunarLander-v3__ppo__1__1768732728__u20.pt  LunarLander-v3__ppo__1__1768732728__u40.pt  LunarLander-v3__ppo__1__1768732728__u60.pt  LunarLander-v3__ppo__1__1768732728__u80.pt  LunarLander-v3__ppo__1__1768735566.ckpt  (+159 more)
HFDRL_UNIT8/wandb/: latest-run
(+246 files in other folders)
